assets/css/style.scss
---
---

@import "global";

.acc-home {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;

    img {
        max-width: 100%;
        width: 100%;
    }

    p {
        text-align: center;
        font-size: 20px;
        line-height: 32px;
    }

    @media (min-width: $mobile_screen) {
        max-width: 100%;
        width: 100%;
        flex-wrap: nowrap;
        font-size: 20px;
        line-height: 32px;

        p {
            padding: 0 36px;
        }
    }
}

#team {
    display: flex;
    flex-wrap: wrap;

    .card {
        border: 2px solid $black;
        position: relative;
        width: 100%;
        display: flex;
        flex-direction: column;
        max-height: 620px;
        border-top: 0px;

        .images {
            max-height: 500px;

        }

        .images,
        img {
            position: relative;
            max-width: 100%;
            width: 100%;
        }

        .overlay {
            opacity: 0;
            position: absolute;
            z-index: 2;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            background: $black; // Black overlay
            justify-content: center;
            align-items: center;
            transition: 0.3s all ease;
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 24px;
            flex-direction: column;
            padding: 20px;
            text-align: center;

            img.icon {
                height: 40px !important;
                width: 70px !important;
            }

            p {
                font-weight: 700;
                font-size: 16px;
                line-height: 24px;
                color: $white;
                letter-spacing: 2px;
            }
        }

        &:hover .overlay {
            opacity: 1;
        }

        .card-footer {
            height: 120px;
            background-color: $white;
            display: flex;
            flex-direction: column;
            justify-content: center;
            padding: 0 30px;

            h2 {
                font-weight: 700;
                font-size: 14px;
                line-height: 18px;
                letter-spacing: 2px;
            }

            p {
                font-size: 16px;
                line-height: 26px;
            }
        }
    }

    #card1 {
        width: 66.66%;

        .images {
            display: flex;
            flex-wrap: wrap;

            img {
                width: 100%;
                max-height: 500px;
                height: auto;
                object-fit: cover;
                background-position: center;
            }
        }

        &:hover .overlay {
            display: flex;
        }

        .card-footer {
            border-top: 2px solid $black;
        }
    }

    #card2 {
        width: 33.33%;
        flex-direction: column-reverse; // Description on top for desktop

        .images {
            width: 100%;
            height: 100%;
        }

        .images img {
            height: 100%; // Subtract the footer height
            width: 100%;
            object-fit: cover;
        }

        &:hover .overlay {
            display: flex;
        }

        .card-footer {
            border-top: 2px solid $black;
        }
    }

    @media (max-width: 991px) {

        // Adjust based on your mobile breakpoint
        #card1 {
            width: 100%;

            .images img {
                width: 100%; // Adjust if you want a different layout on mobile
            }
        }

        #card2 {
            width: 100%;
            flex-direction: column;

            .images img {
                width: 100%; // Adjust if you want a different layout on mobile
            }
        }
    }

    @media (min-width: $mobile_screen) {
        .border-b {
            border-bottom: 2px solid $black;
        }

        .border-t {
            border-top: 2px solid $black;
        }

        .border-l {
            border-left: 2px solid $black !important;
        }

        .border-r {
            border-right: 2px solid $black;
        }

        .border-x {
            border-left: 2px solid $black;
            border-right: 2px solid $black;
        }

        .border-y {
            border-top: 2px solid $black;
            border-bottom: 2px solid $black;
        }

        .card {
            border: 0px solid $black;
        }

        #card2 {
            .card-footer {
                border-top: 0px solid $black;
            }
        }
    }
}

.icon {
    display: block;
    // Add styles for the eye icon here
}

#info {
    padding: 60px 0;

    @media (min-width: $mobile_screen) {
        padding: 80px 0;
    }

    .info-wrapper {
        display: flex;
        flex-direction: column;
        gap: 30px;

        h2 {
            font-size: 44px;
            font-weight: 700;
            line-height: 44px;
            text-transform: uppercase;
        }

        h4 {
            font-size: 16px;
            font-weight: 700;
            line-height: 18px;
            letter-spacing: 2px;
            text-transform: uppercase;
        }

        p {
            font-size: 16px;
            font-weight: 400;
            line-height: 24px;
        }

        @media (min-width: $mobile_screen) {
            gap: 80px;

            h2 {
                font-size: 116px;
                line-height: 120px;

            }

            h4 {
                font-size: 30px;
                line-height: 40px;
            }

            p {
                font-size: 32px;
                line-height: 50px;
            }
        }
    }
}
/* ... */

